@@ -1,3 +1,6 @@
+2015-12-27  Edward Smith-Rowland  <3dw4rd@verizon.net>
+	* include/bits/c++0x_warning.h Remove experimental language.
+
 2015-12-16  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/68912
